[gd_scene load_steps=6 format=3 uid="uid://c8n7x2m4k5pqr"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/ForgeStation.gd" id="3"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="4"]
[ext_resource type="Texture2D" path="res://assets/forge_background.png" id="5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 40)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("5")
centered = false

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(512, 384)
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.8, 0.6, 0.4, 1)

[node name="Anvil" type="Area2D" parent="."]
position = Vector2(200, 300)
script = ExtResource("3")
station_name = "Anvil"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anvil"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Anvil"]
modulate = Color(0.5, 0.5, 0.5, 1)

[node name="Grindstone" type="Area2D" parent="."]
position = Vector2(512, 200)
script = ExtResource("3")
station_name = "Grindstone"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grindstone"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Grindstone"]
modulate = Color(0.7, 0.7, 0.7, 1)

[node name="QuenchTank" type="Area2D" parent="."]
position = Vector2(800, 300)
script = ExtResource("3")
station_name = "Quench"

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuenchTank"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="QuenchTank"]
modulate = Color(0.2, 0.4, 0.8, 1)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
text = "Score: 0"
theme = ExtResource("4")

[node name="MaterialsLabel" type="Label" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -60.0
text = "Materials:"
theme = ExtResource("4")

[node name="CraftingPanel" type="Panel" parent="UILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/CraftingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EchoPanel" type="Panel" parent="UILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/EchoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EchoText" type="Label" parent="UILayer/EchoPanel/VBoxContainer"]
layout_mode = 2
text = "Echo discovered..."
autowrap_mode = 3
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UILayer/EchoPanel/VBoxContainer"]
layout_mode = 2
text = "Close"